# godot-properties-parser

./: Cargo.toml  README.md
.github/workflows/: lifecycle.yml  release.yml
src/: lib.rs  main.rs
src/parsers/: mod.rs  parser_header.rs  parser_project_file.rs  parser_property.rs  parser_property_file.rs  parser_scene_file.rs
src/scenes/: simple_header.tscn  table_selection_entry.tscn
tests/: test_parser_property.rs  test_parser_property_file.rs  test_parser_scene_file.rs  test_scene_files_integration.rs
tests/integration/: mod.rs  play_room_tests.rs  shop_sidebar_tests.rs  simple_header_tests.rs  table_selection_entry_tests.rs  test_helpers.rs
tests/integration/project_tests/: mod.rs  project_gamblers_table_tests.rs
tests/integration/scene_tests/: mod.rs  play_room_tests.rs  scene_with_builtin_script_tests.rs  shop_sidebar_tests.rs  simple_header_tests.rs  table_selection_entry_tests.rs
tests/projects/: project_gamblers_table.godot
tests/scenes/: play_room.tscn  scene_with_builtin_script.tscn  shop_sidebar.tscn
