[package]
name = "godot-properties-parser"
version = "0.2.0"
edition = "2024"
authors = ["Sven Teigler"]
description = "A parser for Godot Engine property files (.tscn scenes and .godot projects)"
license = "MIT"
repository = "https://github.com/sven-teigler/godot-properties-parser"
readme = "README.md"
keywords = ["godot", "parser", "gamedev", "tscn", "scene"]
categories = ["parsing", "game-development"]

[dependencies]
nom = "8.0.0"
